--- a/3DParticleSystem/ParticleSystemDemo.vcxproj
+++ b/3DParticleSystem/ParticleSystemDemo.vcxproj
@@ -99,31 +99,31 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(ProjectDir)glut\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)glut\include;$(ProjectDir)glew\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(ProjectDir)glut\libs</AdditionalLibraryDirectories>
-      <AdditionalDependencies>freeglut.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)glut\libs;$(ProjectDir)glew\libs</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freeglut.lib;glew32.lib;glew32s.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(ProjectDir)glut\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)glut\include;$(ProjectDir)glew\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(ProjectDir)glut\libs</AdditionalLibraryDirectories>
-      <AdditionalDependencies>freeglut.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)glut\libs;$(ProjectDir)glew\libs</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freeglut.lib;glew32.lib;glew32s.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="particle.cpp" />
-    <ClCompile Include="particle_system.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="constants.h" />
-    <ClInclude Include="particle.h" />
-    <ClInclude Include="particle_system.h" />
+    <ClInclude Include="Constants.h" />
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
